# RustHttpServer

./: Cargo.toml  readme.md
async_lib/: Cargo.toml  readme.md
async_lib/src/: lib.rs
async_lib/src/event/: listener.rs  mod.rs
async_lib_macros/: Cargo.toml  readme.md
async_lib_macros/src/: async_func.rs  async_trait.rs  lib.rs
html/: Cargo.toml
html/src/: attributes.rs  element.rs  function.rs  lib.rs  node.rs
html_macros/: Cargo.toml  readme.md
html_macros/src/: attributes.rs  element.rs  functions.rs  lib.rs
html_types/: Cargo.toml
html_types/src/: lib.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs  method.rs  path.rs  request.rs  response.rs  status.rs  url.rs
http_core/: Cargo.toml  readme.md
http_core/src/: error.rs  lib.rs  method.rs  request.rs  response.rs  url.rs
http_macro/: Cargo.toml  readme.md
http_macro/src/: header_types.rs  headers.rs  lib.rs  path.rs  router.rs  server.rs  util.rs
http_server/: Cargo.toml  readme.md
http_server/src/: connection.rs  lib.rs  process.rs
http_types/: Cargo.toml
http_types/src/: lib.rs  request.rs  response.rs  status.rs  url.rs
path_regex_macro/: Cargo.toml
path_regex_macro/src/: lib.rs  regex.rs
src/: error.rs  http_status.rs  lib.rs  main.rs  path.rs  request.rs  response.rs  router.rs  server.rs
src/http0/: request.rs
src/http1/: mod.rs  request.rs
src/path/: key.rs  lexer.rs  segment.rs  token.rs
src/protocol/: mod.rs
src/router/: layer.rs  route.rs  status.rs
src/server/: arguments.rs  helpers.rs  mod.rs  queue.rs  sync_server.rs  task.rs
util/src/: lib.rs
(+184 files in other folders)
