[package]
name = "html_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
lazy_static = "1.5.0"
paste = "1.0.15"
proc-macro2 = "1.0.101"
quote = "1.0.40"
regex = "1.12.3"
swc = "56.0.0"
swc_common = "19.0.0"
swc_core = "58.0.4"
swc_ecma_ast = "21.0.0"
swc_ecma_codegen = "24.0.0"
swc_ecma_parser = { version = "35.0.0", features = ["verify", "typescript"] }
swc_ecma_transforms_typescript = "42.0.0"
swc_ecma_visit = "21.0.0"
syn = "2.0.106"
